--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Gabriela|Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">    
     <link href="style2.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
 
@@ -16,10 +18,10 @@
 <body>
     <div class="hero">
         <div class="sixty-five">
-        <div class="intro fadeload">
-            <h3>I'm Laura</h3> <br/><br/><br/><br/>
-            <h1>I design things and I have four cats.</h1>
-            <h2>About // Contact</h2>
+        <div class="intro">
+            <h3 class="upload">Well, Hello There.</h3> <br/><br/><br/><br/>
+            <h1 class="upload one">My name is Laura.</h1><h1 class="upload one">Dis my shiz.</h1>
+            <h2 class="upload two">Take a look</h2>
         </div>
         </div>    
         
@@ -34,9 +36,27 @@
 
     </div>    
     
-    <div class="work">
+    <div class="work upload three">
+                <div class="left">
+                <img src="images/10-TravelPoster1_Port2017-Square.jpg" width="100%">
+                </div>
+                <div class="right">
+                <img src="images/11-TravelPoster2_Port2017-Square.jpg" width="100%">
+                </div> 
+                <div class="left">
+                <img src="images/12-TravelPoster3_Port2017-Square.jpg" width="100%">
+                </div>
+                <div class="right">
+                <img src="images/13-TravelPoster4_Port2017-Square.jpg" width="100%">
+                </div> 
                 <div class="left">
                 <img src="images/02-Route59_LFW_Port2017-Square.jpg" width="100%">
+                </div>
+                <div class="right">
+                <img src="images/14-FallFrenzy_Port2017-Square.jpg" width="100%">
+                </div> 
+                <div class="left">
+                <img src="images/CNENT_43652-02_TAH_October_EarnAndWin_Poster_1610780-LW-Square.jpg" width="100%">
                 </div>
                 <div class="right">
                 <img src="images/04-Winner_LFW_Port2017_v4-Square.jpg" width="100%">
@@ -45,7 +65,7 @@
                 <img src="images/08-SocoAd_LFW_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/06-YoureTheOneDrawing_LFW_Port2017-Detail-copy.jpg" width="100%">
+                <img src="images/07-HRAmp_LFW_Port2017-Square.jpg" width="100%">
                 </div>  
                 <div class="left">
                 <img src="images/03-TheSpaHR_LFW_Port2017_v3-Square.jpg" width="100%">
