--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="images/14-FallFrenzy_Port2017-Square.jpg" width="100%">
                 </div> 
                 <div class="left">
-                <img src="images/CNENT_43652-02_TAH_October_EarnAndWin_Poster_1610780-LW-Square.jpg" width="100%">
+                <img src="images/15-FallIntoFun_Port2017.jpg" width="100%">
                 </div>
                 <div class="right">
                 <img src="images/04-Winner_LFW_Port2017_v4-Square.jpg" width="100%">
@@ -78,7 +78,10 @@
                 </div>
                 <div class="right">
                 <img src="images/06-YoureTheOneDrawing_LFW_Port2017-Square.jpg" width="100%">
-                </div>  
+                </div>
+                <div class="left">
+                <img src="images/CNENT_43652-02_TAH_October_EarnAndWin_Poster_1610780-LW-Square.jpg" width="100%">
+                </div>
     </div>
     
 </body>
