--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Laura Wilson</title>
+<title>Laura Wilson | Designer</title>
 
 <!-- <meta name="description" content="XXXXXXXXXXXXXXXX"> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
