--- a/index.html
+++ b/index.html
@@ -95,5 +95,16 @@
         <a href="mailto:laurwilson47@gmail.com" target="_top"><h1>let’s chat</h1></a>
     </div>
     
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-103316667-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    
 </body>
 </html>
