--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="hero">
-        <h4><a href="mailto:laurwilson47@gmail.com" target="_top">Drop Me A Line</a> • <a href="https://www.linkedin.com/in/my-name-is-laura-wilson" target="_blank">My LinkedIn</a></h4>
+        <h4><a href="mailto:laurwilson47@gmail.com" target="_top">Drop Me A Line</a>&nbsp;&nbsp;&nbsp; • &nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/my-name-is-laura-wilson" target="_blank">My LinkedIn</a></h4>
         <div class="sixty-five">
         <div class="intro">
             <h1 class="upload one">LAURA WILSON</h1>
