--- a/index.html
+++ b/index.html
@@ -26,64 +26,64 @@
     
     <div class="work upload three">
                 <div class="left">
-                <img src="images/02-Route59_LFW_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/02-Route59_LFW_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/04-Winner_LFW_Port2017_v4-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/04-Winner_LFW_Port2017_v4-Square.jpg">
                 </div> 
                 <div class="left">
-                <img src="images/11-TravelPoster2_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/11-TravelPoster2_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/12-TravelPoster3_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/12-TravelPoster3_Port2017-Square.jpg" width="100%">
                 </div> 
                 <div class="left">
-                <img src="images/10-TravelPoster1_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/10-TravelPoster1_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/13-TravelPoster4_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/13-TravelPoster4_Port2017-Square.jpg" width="100%">
                 </div> 
                 <div class="left">
-                <img src="images/03-TheSpaHR_LFW_Port2017_v3-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/03-TheSpaHR_LFW_Port2017_v3-Square.jpg" width="100%">
                 </div> 
                 <div class="right">
-                <img src="images/16-OneHundred_Port2017.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/16-OneHundred_Port2017.jpg" width="100%">
                 </div>
                 <div class="left">
-                <img src="images/08-SocoAd_LFW_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/08-SocoAd_LFW_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/07-HRAmp_LFW_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/07-HRAmp_LFW_Port2017-Square.jpg" width="100%">
                 </div>  
                 <div class="left">
-                <img src="images/14-FallFrenzy_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/14-FallFrenzy_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/05-ThrowbackThursdays_LFW_Port2017_v2-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/05-ThrowbackThursdays_LFW_Port2017_v2-Square.jpg" width="100%">
                 </div>  
                  <div class="left">
-                <img src="images/15-FallIntoFun_Port2017.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/15-FallIntoFun_Port2017.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/06-YoureTheOneDrawing_LFW_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/06-YoureTheOneDrawing_LFW_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="left">
-                <img src="images/CNENT_43652-02_TAH_October_EarnAndWin_Poster_1610780-LW-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/CNENT_43652-02_TAH_October_EarnAndWin_Poster_1610780-LW-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/01-TheSteakhouse_LFW_Port2017-Square.jpg" width="100%">                    
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/01-TheSteakhouse_LFW_Port2017-Square.jpg" width="100%">                    
                 </div>
                 <div class="left">
-                <img src="images/19-HoneycombHeroes_Port2017_v2-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/19-HoneycombHeroes_Port2017_v2-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/19-HoneycombHeroes_Port2017-Square.jpg" width="100%">                    
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/19-HoneycombHeroes_Port2017-Square.jpg" width="100%">                    
                 </div>
                 <div class="left">
-                <img src="images/20-EastCoast1_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/20-EastCoast1_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
-                <img src="images/17-3DDrawingEvent_Port2017-Square.jpg" width="100%">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/17-3DDrawingEvent_Port2017-Square.jpg" width="100%">
                 </div>
     </div>
     
