--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
                 <img img style='height: 100%; width: 100%; object-fit: contain' src="images/16-OneHundred_Port2017.jpg" width="100%">
                 </div>
                 <div class="left">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/28-Brio_LFW_Port2017_Square.jpg" width="100%">
+                </div> 
+                <div class="right">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/27-MobilePediatric2_LFW_Port2017_Square.jpg" width="100%">
+                </div>
+                <div class="left">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/21-HangoutPoster1_LFW_Port2017_Square.jpg" width="100%">
+                </div> 
+                <div class="right">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/22-HangoutPoster2_LFW_Port2017_Square.jpg" width="100%">
+                </div>
+                <div class="left">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/25-MobileGas2_LFW_Port2017_Square.jpg" width="100%">
+                </div> 
+                <div class="right">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/24-MobileGas1-2_LFW_Port2017_Square.jpg" width="100%">
+                </div>
+                <div class="left">
                 <img img style='height: 100%; width: 100%; object-fit: contain' src="images/08-SocoAd_LFW_Port2017-Square.jpg" width="100%">
                 </div>
                 <div class="right">
@@ -78,6 +96,12 @@
                 </div>
                 <div class="right">
                 <img img style='height: 100%; width: 100%; object-fit: contain' src="images/19-HoneycombHeroes_Port2017-Square.jpg" width="100%">                    
+                </div>
+                <div class="left">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/23-MAXFolder1_LFW_Port2017_Square.jpg" width="100%">
+                </div>
+                <div class="right">
+                <img img style='height: 100%; width: 100%; object-fit: contain' src="images/26-Justin_LFW_Port2017_Square.jpg" width="100%">
                 </div>
                 <div class="left">
                 <img img style='height: 100%; width: 100%; object-fit: contain' src="images/20-EastCoast1_Port2017-Square.jpg" width="100%">
