--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="style2.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
 
@@ -18,8 +19,8 @@
         <h4><a href="mailto:laurwilson47@gmail.com" target="_top">Drop Me A Line</a> <span class="navpad">|</span> <a href="https://www.linkedin.com/in/my-name-is-laura-wilson" target="_blank">My LinkedIn</a></h4>
         <div class="sixty-five">
         <div class="intro">
-            <h1 class="upload one">LAURA WILSON</h1>
-            <h2 class="upload two">DESIGNER | ART DIRECTOR | KITTY MAMA</h2>
+            <h1 class="upload one">laura wilson</h1>
+            <h2 class="upload two">DESIGNER | ART DIRECTOR</h2>
         </div>
         </div>    
     </div>    
@@ -108,7 +109,7 @@
    
     <div class="footer">
         <h2>thanks for looking</h2>
-        <a href="mailto:laurwilson47@gmail.com" target="_top"><h1>let’s chat</h1></a>
+        <a href="mailto:laurwilson47@gmail.com" target="_top"><h3>let’s chat</h3></a>
     </div>
     
     <script>
