--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
    
     <div class="footer">
         <h2>thanks for looking</h2>
-        <a href="mailto:laurwilson47@gmail.com" target="_top"><h3>let’s chat</h3></a>
+        <a href="mailto:laurawilson47@gmail.com" target="_top"><h3>let’s chat</h3></a>
     </div>
     
     <script>
